@@ -22,6 +22,7 @@ CHANGES IN HTMLDOC v1.8.7
     BUG FIXES
 
 	- Now ignore illegal HTML in tables.
+	- The VALIGN code didn't handle empty cells properly.
 
 
 CHANGES IN HTMLDOC v1.8.6
